--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,26 +1,26 @@
 body {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
+	margin: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	overflow: hidden;
+	position: relative;
 }
 .photo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100vw; /* Full width of the viewport */
-  height: 100vh; /* Full height of the viewport */
-  object-fit: cover;
-  object-position: center;
-  transform: translate(-50%, -50%); /* Center the image */
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 100vw;
+	height: 100vh;
+	object-fit: cover;
+	object-position: center;
+	transform: translate(-50%, -50%); /* Center the image */
 }
 
-.content-box {
+/* .content-box {
   height: 500px;
   width: 100%;
   background-color: blue;
   z-index: 1;
-}
+} */
